MSP-5186 Use apierrrors.Error
