# controller/access_list.go
@@ -2,11 +2,13 @@ package controller
 
 import (
 	"context"
+	"fmt"
+
+	"isp-system-service/domain"
 
 	"github.com/pkg/errors"
+	"github.com/txix-open/isp-kit/grpc/apierrors"
 	"google.golang.org/grpc/codes"
-	"google.golang.org/grpc/status"
-	"isp-system-service/domain"
 )
 
 type AccessListService interface {
@@ -34,14 +36,19 @@ func NewAccessList(service AccessListService) AccessList {
 //	@Produce		json
 //	@Param			body	body		domain.Identity		false	"идентификатор приложения"
 //	@Success		200		{array}		domain.MethodInfo	"список доступности методов"
-//	@Failure		404		{object}	domain.GrpcError
-//	@Failure		500		{object}	domain.GrpcError
+//	@Failure		404		{object}	apierrors.Error
+//	@Failure		500		{object}	apierrors.Error
 //	@Router			/access_list/get_by_id [POST]
 func (c AccessList) GetById(ctx context.Context, req domain.Identity) ([]domain.MethodInfo, error) {
 	result, err := c.service.GetById(ctx, req.Id)
 	switch {
 	case errors.Is(err, domain.ErrApplicationNotFound):
-		return nil, status.Errorf(codes.NotFound, "application not found")
+		return nil, apierrors.New(
+			codes.NotFound,
+			domain.ErrCodeApplicationNotFound,
+			fmt.Sprintf("application with id %d not found", req.Id),
+			err,
+		)
 	case err != nil:
 		return nil, err
 	default:
@@ -58,14 +65,19 @@ func (c AccessList) GetById(ctx context.Context, req domain.Identity) ([]domain.
 //	@Produce		json
 //	@Param			body	body		domain.AccessListSetOneRequest	false	"объект для настройки доступа"
 //	@Success		200		{object}	domain.AccessListSetOneResponse	"количество измененных строк"
-//	@Failure		404		{object}	domain.GrpcError
-//	@Failure		500		{object}	domain.GrpcError
+//	@Failure		404		{object}	apierrors.Error
+//	@Failure		500		{object}	apierrors.Error
 //	@Router			/access_list/set_one [POST]
 func (c AccessList) SetOne(ctx context.Context, req domain.AccessListSetOneRequest) (*domain.AccessListSetOneResponse, error) {
 	result, err := c.service.SetOne(ctx, req)
 	switch {
 	case errors.Is(err, domain.ErrApplicationNotFound):
-		return nil, status.Errorf(codes.NotFound, "application not found")
+		return nil, apierrors.New(
+			codes.NotFound,
+			domain.ErrCodeApplicationNotFound,
+			fmt.Sprintf("application with id %d not found", req.AppId),
+			err,
+		)
 	case err != nil:
 		return nil, err
 	default:
@@ -82,14 +94,19 @@ func (c AccessList) SetOne(ctx context.Context, req domain.AccessListSetOneReque
 //	@Produce		json
 //	@Param			body	body		domain.AccessListSetListRequest	false	"объект настройки доступа"
 //	@Success		200		{array}		domain.MethodInfo				"список доступности методов"
-//	@Failure		404		{object}	domain.GrpcError
-//	@Failure		500		{object}	domain.GrpcError
+//	@Failure		404		{object}	apierrors.Error
+//	@Failure		500		{object}	apierrors.Error
 //	@Router			/access_list/set_list [POST]
 func (c AccessList) SetList(ctx context.Context, req domain.AccessListSetListRequest) ([]domain.MethodInfo, error) {
 	result, err := c.service.SetList(ctx, req)
 	switch {
 	case errors.Is(err, domain.ErrApplicationNotFound):
-		return nil, status.Errorf(codes.NotFound, "application not found")
+		return nil, apierrors.New(
+			codes.NotFound,
+			domain.ErrCodeApplicationNotFound,
+			fmt.Sprintf("application with id %d not found", req.AppId),
+			err,
+		)
 	case err != nil:
 		return nil, err
 	default:
