# controller/domain.go
@@ -2,11 +2,13 @@ package controller
 
 import (
 	"context"
+	"fmt"
+
+	"isp-system-service/domain"
 
 	"github.com/pkg/errors"
+	"github.com/txix-open/isp-kit/grpc/apierrors"
 	"google.golang.org/grpc/codes"
-	"google.golang.org/grpc/status"
-	"isp-system-service/domain"
 )
 
 type DomainService interface {
@@ -35,14 +37,19 @@ func NewDomain(service DomainService) Domain {
 //	@Produce		json
 //	@Param			body	body		domain.Identity	true	"Идентификатор домена"
 //	@Success		200		{object}	domain.Domain
-//	@Failure		404		{object}	domain.GrpcError
-//	@Failure		500		{object}	domain.GrpcError
+//	@Failure		404		{object}	apierrors.Error
+//	@Failure		500		{object}	apierrors.Error
 //	@Router			/domain/get_domain_by_id [POST]
 func (c Domain) GetById(ctx context.Context, req domain.Identity) (*domain.Domain, error) {
 	result, err := c.service.GetById(ctx, req.Id)
 	switch {
 	case errors.Is(err, domain.ErrDomainNotFound):
-		return nil, status.Errorf(codes.NotFound, "domain with id %d not found", req.Id)
+		return nil, apierrors.New(
+			codes.NotFound,
+			domain.ErrCodeDomainNotFound,
+			fmt.Sprintf("domain with id %d not found", req.Id),
+			err,
+		)
 	case err != nil:
 		return nil, err
 	default:
@@ -59,7 +66,7 @@ func (c Domain) GetById(ctx context.Context, req domain.Identity) (*domain.Domai
 //	@Produce		json
 //	@Param			body	body		integer	false	"Идентификатор системы"
 //	@Success		200		{array}		domain.Domain
-//	@Failure		500		{object}	domain.GrpcError
+//	@Failure		500		{object}	apierrors.Error
 //	@Router			/domain/get_domains_by_system_id [POST]
 func (c Domain) GetBySystemId(ctx context.Context) ([]domain.Domain, error) {
 	return c.service.GetBySystemId(ctx, domain.DefaultSystemId)
@@ -74,17 +81,31 @@ func (c Domain) GetBySystemId(ctx context.Context) ([]domain.Domain, error) {
 //	@Produce		json
 //	@Param			body	body		domain.DomainCreateUpdateRequest	true	"Объект домена"
 //	@Success		200		{object}	domain.Domain
-//	@Failure		500		{object}	domain.GrpcError
+//	@Failure		500		{object}	apierrors.Error
 //	@Router			/domain/create_update_domain [POST]
 func (c Domain) CreateUpdate(ctx context.Context, req domain.DomainCreateUpdateRequest) (*domain.Domain, error) {
 	result, err := c.service.CreateUpdate(ctx, req, domain.DefaultSystemId)
 	switch {
 	case errors.Is(err, domain.ErrSystemNotFound):
-		return nil, status.Errorf(codes.InvalidArgument, "system with id %d not found", domain.DefaultSystemId)
+		return nil, apierrors.NewBusinessError(
+			domain.ErrCodeSystemNotFound,
+			fmt.Sprintf("system with id %d not found", domain.DefaultSystemId),
+			err,
+		)
 	case errors.Is(err, domain.ErrDomainNotFound):
-		return nil, status.Errorf(codes.NotFound, "domain with id %d not found", req.Id)
+		return nil, apierrors.New(
+			codes.NotFound,
+			domain.ErrCodeDomainNotFound,
+			fmt.Sprintf("domain with id %d not found", req.Id),
+			err,
+		)
 	case errors.Is(err, domain.ErrDomainDuplicateName):
-		return nil, status.Errorf(codes.AlreadyExists, "domain with name %s already exists", req.Name)
+		return nil, apierrors.New(
+			codes.AlreadyExists,
+			domain.ErrCodeDomainDuplicateName,
+			fmt.Sprintf("domain with name %s already exists", req.Name),
+			err,
+		)
 	case err != nil:
 		return nil, err
 	default:
@@ -101,12 +122,13 @@ func (c Domain) CreateUpdate(ctx context.Context, req domain.DomainCreateUpdateR
 //	@Produce		json
 //	@Param			body	body		[]integer	false	"Массив идентификаторов доменов"
 //	@Success		200		{object}	domain.DeleteResponse
-//	@Failure		400		{object}	domain.GrpcError
-//	@Failure		500		{object}	domain.GrpcError
+//	@Failure		400		{object}	apierrors.Error
+//	@Failure		500		{object}	apierrors.Error
 //	@Router			/domain/delete_domains [POST]
 func (c Domain) Delete(ctx context.Context, req []int) (*domain.DeleteResponse, error) {
 	if len(req) == 0 {
-		return nil, status.Errorf(codes.InvalidArgument, "at least one id are required")
+		return nil, apierrors.NewBusinessError(domain.ErrCodeInvalidRequest,
+			"At least one id are required", errors.New("invalid id count"))
 	}
 
 	result, err := c.service.Delete(ctx, req)
